<resources>
    <string name="app_name">Postory</string>
    <string name="continue_reading">Continue Reading</string>
    <string name="create_post">Create A New Post</string>
    <string name="send">Send Post</string>
    <string name="write_title_hint">Write a Title...</string>
    <string name="write_story_hint">Tell the Story...</string>
    <string name="write_name_hint">Write your nickname</string>
    <string name="write_location_hint">Write the location</string>
    <string name="pick_date_hint">Pick story date</string>
    <string name="fill_necessary_warning">Please fill in necessary fields!</string>
    <string name="choose_image_source">Pick an image for your story </string>
    <string name="shared_on">Shared on:&#160;</string>
    <string name="write_tag_hint">Write tag</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="write_your_mail_address">Write your mail address</string>
    <string name="write_your_password">Write your password</string>
    <string name="write_your_username">Write your username</string>
    <string name="write_your_name">Write your name</string>
    <string name="write_your_surname">Write your surname</string>
    <string name="write_your_password_again">Write your password again</string>
    <string name="username">Username:</string>
    <string name="name">Name:</string>
    <string name="surname">Surname:</string>
    <string name="followed_by">Followed by:</string>
    <string name="following">Following:</string>
    <string name="number_of_posts">Number of posts:</string>
    <string name="follow">Follow</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="time">Time</string>
    <string name="start">Start:</string>
    <string name="end">End:</string>
    <string name="year">Year</string>
    <string name="pick">Pick</string>
    <string name="confirm">Confirm</string>
    <string name="write_your_email_address_to_reset_password">Write your email address to reset password</string>
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>
    <string name="email">Email</string>
    <string name="you_re_following_this_user">Already followed.</string>
    <string name="no_user_found">No user found</string>
    <string name="private_profile">Private Profile</string>

</resources>