<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/post_border"
    android:orientation="vertical">

    <include layout="@layout/toolbar"></include>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:background="@drawable/post_border"
        android:text="@string/create_post"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"></TextView>

    <EditText
        android:id="@+id/op_enter_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginTop="10dp"
        android:hint="@string/write_title_hint"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold"></EditText>

    <LinearLayout
        android:id="@+id/op_info_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/profile_picture"
            android:layout_width="50dp"
            android:layout_height="match_parent"></ImageView>

        <EditText
            android:id="@+id/op_name_field"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:gravity="center_vertical"
            android:hint="@string/write_name_hint"
            android:textStyle="bold"></EditText>

    </LinearLayout>

    <ImageView
        android:id="@+id/post_photo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:clickable="true"
        android:src="@drawable/baseline_photo_size_select_actual_black_24dp">

    </ImageView>

    <RelativeLayout
        android:id="@+id/op_info_layout_2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@id/op_location_text"
            android:src="@drawable/outline_location_on_black_24dp"></ImageView>

        <EditText
            android:id="@+id/op_location_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical"
            android:hint="@string/write_location_hint"
            android:textStyle="bold"></EditText>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:gravity="center_vertical"
            android:src="@drawable/baseline_calendar_today_black_24dp"></ImageView>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:gravity="center_vertical"
            android:hint="@string/pick_date_hint"></EditText>


    </RelativeLayout>

    <EditText
        android:id="@+id/post_story_text_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:hint="@string/write_story_hint"
        android:lines="10">

    </EditText>

<Button
    android:layout_width="80dp"
    android:layout_height="40dp"
    android:layout_gravity="center_horizontal"></Button>
</LinearLayout>